--- a/Frontend/dashboard/app/ui/dashboard/chart/chart.module.css
+++ b/Frontend/dashboard/app/ui/dashboard/chart/chart.module.css
@@ -1,8 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  	background-color: var(--bgSoft);
+   	background-color: var(--bgSoft);
 	padding: 20px;
 	border-radius: 10px;
 }
@@ -25,5 +24,7 @@
 }
 
 .title {
-  margin-bottom: 20px;
+  	font-weight: 200;
+	color: var(--textSoft);
+	margin-bottom: 20px;
 }
